clear and anti-silly action protect